# SuOS

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  doc.txt  suos.lst  suos.nas  test.cmake
img/: main.img  main.img.bak
linux/: DEV.md  Makefile  README.md  bootloader  decompile.sh  floppy.nas  gdb.txt  get-objconv.sh  move.scpt  suos.asm  suos.nas
linux/kernal/: main.c
linux/kernel/: Makefile  asmfunc.asm  asmfunc.h  color.c  color.h  convHankakuTxt.c  dsctbl.c  entry.S  func.asm  func.nas  gdb.src  hankaku.h  hankaku.txt  header.h  int.c  kernel  kernel.asm  kernel.ld  kernel.out  main.c  makefile  makefile1  mmu.h  queue.c  queue.h  screen.c  test.txt  utils.c
linux/kernel/queue/: queue.c  queue.h
linux/kernel/src/: dsctbl.c  entry.S  header.h  int.c  main.c  mmu.h  typedef.h
linux/kernel/src/asmfunc/: asmfunc.S  asmfunc.asm  asmfunc.h  asmfunc_s.asm
linux/kernel/src/color/: color.c  color.h
linux/kernel/src/hankaku/: convHankakuTxt.c
linux/kernel/src/keyboard/: keyboard.c  keyboard.h
linux/kernel/src/list/: list.c  list.h
linux/kernel/src/log/: log.c  log.h
linux/kernel/src/memory/: arraymem.c  arraymem.h  memory.c  memory.cpp  memory.h
linux/kernel/src/mouse/: mouse.c  mouse.h
linux/kernel/src/queue/: queue.c  queue.h
linux/kernel/src/rbtree/: arraylist.c  rbtree.c  rbtree.h
linux/kernel/src/screen/: screen.c  screen.h
linux/kernel/src/serial/: serial.c  serial.h
linux/kernel/src/tmp/: tmp.c  tmp.h
linux/kernel/src/utils/: utils.c  utils.h
linux/kernel/src/window/: window.c  window.h
linux/kernel/utils/: utils.c
linux/output/: suos.img
linux/test/: a.out  gdb.src  hello.nas  makefile  run_test.sh  run_test32.sh  test.S  test.asm  test.c  test.out  test0.c  test_arraylist.c  test_arraymem.c  test_memory.c  test_queue.c  test_rbtree.c  test_screen.c  test_utils.c  test_utils.s  utils_test.c
linux/test/fake/: asmfunc.c  log.c  memory.c
linux/test/utils/: log.c  vram.c
